--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Mohan",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.8.1"
   }
 }
